# mtaa-backend

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yaml  entrypoint.sh  main.py  pyproject.toml
.github/workflows/: pytest.yml
app/api/: dependencies.py  main.py  middleware.py
app/core/: config.py
app/db/: database.py
app/models/: __init__.py  address_model.py  category_listing_model.py  category_model.py  favorite_listing_model.py  firebase_cloud_token_model.py  listing_image.py  listing_model.py  product_model.py  rent_listing_model.py  sale_lisitng_model.py  sale_listing_model.py  user_model.py  user_review_model.py  user_search_alert_model.py
app/schedulers/: run_user_searches.py
app/schemas/: __init__.py  address_schema.py  listing_s.py  listing_schema.py  product_schema.py  review_schema.py  transaction_schema.py  user_schema.py  user_search_alerts.py
app/seeders/: 1_seed_users.py  1_users.py  2_categories.py  3_addresses.py  4_user_reviews.py  5_listings.py  5_users_listings.py  6_liked_listings.py  7_listing_categories.py  run_all_seeders.py
app/services/: user_service.py
app/tests/: conftest.py  test_listings.py  test_users.py
app/user_search/: run_user_searaches.py
docs/: index.html
migrations/: env.py  script.py.mako
migrations/versions/: 2025-03-01_add_date_formed_field_to_the_product_.py  2025-03-01_initial_migration.py  2025-03-02_migration_3.py  2025-03-15_generate_user_tables.py  2025-03-17_add_offer_type_and_listing_status_to_.py  2025-03-17_favorite_listings_table.py  2025-03-17_generate_listings_addresses_category_.py  (+23 more)
(+18 files in other folders)
